# nova-guard-api

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial.py
diagrams/: nova-guard-api-architecture.excalidraw
src/nova_guard_api/: __init__.py  main.py  seed.py
src/nova_guard_api/api/: deps.py  idempotency_helper.py
src/nova_guard_api/api/routes/: artifacts.py  characters.py  factions.py  market.py  missions.py  planets.py  species.py  squads.py
src/nova_guard_api/core/: __init__.py  config.py  errors.py  idempotency.py  pagination.py  rate_limit.py  security.py
src/nova_guard_api/db/: models.py  session.py
src/nova_guard_api/schemas/: artifacts.py  characters.py  common.py  factions.py  market.py  missions.py  planets.py  species.py  squads.py
src/nova_guard_api/scripts/: seed.py
src/nova_guard_api/services/: rules.py  webhooks.py
tests/: conftest.py  test_api.py
